Fix text-alignin second section

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ img {
     display: flex;
     justify-content: center;
     gap: 32px;
+    text-align: center;
 }
 
 .chicken,
